--- a/responsive-web-design/build-a-personal-portfolio-webpage/personal-portfolio-webpage.css
+++ b/responsive-web-design/build-a-personal-portfolio-webpage/personal-portfolio-webpage.css
@@ -287,7 +287,7 @@ div.skill>img,
     margin: 3px;
     padding: 0;
     position: relative;
-    border: 2px ridge rgb(0,0,0,0.3);
+    border: 2px ridge rgb(0, 0, 0, 0.3);
     /* box-shadow: 2px 2px 6px 2px rgb(0, 0, 0, 0.4); */
 }
 
@@ -305,7 +305,8 @@ div.skill>img,
     opacity: 1;
 }
 
-.project-tile:hover > .project-picture {
+.project-tile:hover>.project-picture,
+.project-tile:active>.project-picture {
     visibility: hidden;
     opacity: 0;
     transition: visibility 0.3s, opacity 0.3s linear;
@@ -332,13 +333,13 @@ div.skill>img,
 .project-info h3 {
     margin: 5px;
     font-size: 1.5em;
-} 
+}
 
 .project-info h4 {
     margin: 5px;
     font-style: oblique;
     color: #223;
-} 
+}
 
 .project-info p {
     font-weight: 600;
