--- a/responsive-web-design/build-a-technical-documentation-page/technical-documentation-page.css
+++ b/responsive-web-design/build-a-technical-documentation-page/technical-documentation-page.css
@@ -1,3 +1,7 @@
+:root {
+    --header-left-padding: 10px;
+}
+
 html,
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -30,7 +34,7 @@ nav {
 nav>header {
     font-size: 30px;
     line-height: 30px;
-    padding: 10px 0px 10px 50px;
+    padding: 10px 0px 10px var(--header-left-padding);
     margin: 0;
     text-align: left;
     background-color: #FFF;
