--- a/responsive-web-design/build-a-technical-documentation-page/app/technical-documentation-page.css
+++ b/responsive-web-design/build-a-technical-documentation-page/app/technical-documentation-page.css
@@ -1,7 +1,3 @@
-:root {
-    --header-left-padding: 10px;
-}
-
 html,
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -34,10 +30,14 @@ nav {
 nav>header {
     font-size: 30px;
     line-height: 30px;
-    padding: 10px 0px 10px var(--header-left-padding);
+    padding: 10px 0px 10px 10px;
     margin: 0;
     text-align: left;
     background-color: #FFF;
+}
+
+nav>header.with-fcc-test {
+    padding-left: 50px;
 }
 
 nav>ul,
