--- a/front-end-libraries-projects/build-a-random-quote-machine/src/sass/App.scss
+++ b/front-end-libraries-projects/build-a-random-quote-machine/src/sass/App.scss
@@ -13,13 +13,50 @@ main {
   @extend .bg-secondary;
 }
 
+@mixin quote-box-height() {
+  min-height: 249px;
+
+  @media only screen and (max-width: 810px) {
+    min-height: 279px;
+  }
+
+  @media only screen and (max-width: 640px) {
+    min-height: 309px;
+  }
+  
+  @media only screen and (max-width: 510px) {
+    min-height: 339px;
+  }
+  
+  @media only screen and (max-width: 460px) {
+    min-height: 369px;
+  }
+ 
+  @media only screen and (max-width: 390px) {
+    min-height: 399px;
+  }
+  
+  @media only screen and (max-width: 360px) {
+    min-height: 429px;
+  }
+
+  @media only screen and (max-width: 330px) {
+    min-height: 459px;
+  }
+}
+
 #quote-box {
   @extend .card;
   margin: 10px;
-  max-width: 900px;
+  width: 900px;
 
-  div {
+  @include quote-box-height;
+  
+  #quote {
     @extend .card-body;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     
     #text {
       @extend .blockquote;
@@ -29,6 +66,11 @@ main {
       @extend .blockquote-footer;
       font-size: 100%;
     }
+  }
+
+  .error {
+    @extend .card-body;
+    @extend .centerContent;
   }
 
   footer {
@@ -43,7 +85,7 @@ main {
       @extend .btn-primary;
       @extend .col-5;
       width: 30%;
-      max-width: 200px;
+      width: 200px;
       @extend .centerContent;
     }
   }
