--- a/data-visualization-projects/visualize-data-with-a-choropleth-map/src/components/EducationAttainment/style.css
+++ b/data-visualization-projects/visualize-data-with-a-choropleth-map/src/components/EducationAttainment/style.css
@@ -42,11 +42,11 @@ svg {
 }
 
 .county {
-    fill: 'black'
+    stroke: rgba(0, 0, 0, 0.2)
 }
 
 
 .county:hover {
-    stroke: 'red'
+    stroke: rgba(0, 0, 0, 0.9)
 }
 
