feat(treemap): Add tooltip

--- a/data-visualization-projects/visualize-data-with-a-treemap-diagram/src/d3/treemap.css
+++ b/data-visualization-projects/visualize-data-with-a-treemap-diagram/src/d3/treemap.css
@@ -2,28 +2,32 @@
     fill: rgb(50, 50, 50);
 }
 
-g.tile rect {
+g.tileParent rect {
     stroke: rgb(25, 25, 25);
     stroke-width: 1px;
 }
 
-g.tile div {
+g.tileParent div {
     /* font: 14px sans-serif; */
     color: white;
     text-shadow: 2px 2px 4px rgb(25, 25, 25);
 
 }
 
-g.tile:hover rect {
+g.tileParent:hover rect {
     stroke: rgb(0, 0, 0);
     opacity: 0.5;
+}
+
+.tileOverlay {
+    opacity: 0;
 }
 
 #tooltip {
     color: black;
     font-weight: bold;
     text-align: center;
-    background-color: rgba(236, 235, 183, 0.9);
+    background-color: rgba(200, 200, 200, 0.95);
     box-shadow: 1px 1px 10px;
     padding: 5px;
 }
